avAdmin/admin-directives/elcensus/elcensus.less
[av-admin-elcensus] {
  .input-group.search {
    margin-right: 10px;
  }

  .header-block.affix-top {
    margin-top: 0;
  }

  .form-group .radio {
    border: 2px solid transparent;
    border-radius: 4px;
    padding: 10px 15px;
    text-align: left;
    cursor: pointer;

    &.selected {
      background-color: @av-primary-contrast;
      border-color: @gray-lighter;

      .header {
        color: @av-secondary;
      }
    }

    &:hover {
      border-color: @gray-lighter;
    }

    input[type="radio"] {
      display: none;
    }

    .header {
      display: block;
      text-align: left;
      font-size: 16px;
      padding-bottom: 6px;
    }

    .description {
      color: @gray-light;
    }
  }

  .affixed.affix-placeholder {
    display: block;
    width: 100%;
    height: 91px;
  }

  .form-group {
    margin-left: 0;
    margin-right: 0;

    .extra-fields-wrapper {
      padding-top: 25px;
      position: relative;

      [av-extra-field] {
        position: relative;
      }

      .dndPlaceholder {
        position: relative;
        display: block;
        background-color: @gray-light;
        width: 100%;
        height: 50px;
      }
    }
  }

  .censustable {
    tr td.wide {
      text-align: center;
      padding: 30px;
    }

    thead > tr > th {
      vertical-align: top;
    }

    tbody > tr {
      transition: all 0.5s ease;
    }

    .small-col {
      width: 95px;

      input {
        margin-right: 5px;
        float: left;
      }
    }
  }
}

.export-all-census-modal progressbar {
  margin-top: 15px;
}

